# World-Engine

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: ci.yml
apps/worldspace-cli/: Cargo.toml
apps/worldspace-cli/src/: main.rs
apps/worldspace-desktop/: Cargo.toml
apps/worldspace-desktop/src/: main.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/author/: Cargo.toml
crates/author/src/: editor.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  types.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: action.rs  lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs  world.rs
crates/persist/: Cargo.toml
crates/persist/src/: lib.rs  snapshot.rs  store.rs
crates/render/: Cargo.toml
crates/render-wgpu/: Cargo.toml
crates/render-wgpu/src/: camera.rs  gpu.rs  lib.rs  shaders.rs
crates/render/src/: lib.rs  renderer.rs
crates/stream/: Cargo.toml
crates/stream/benches/: bench_stream_partition.rs
crates/stream/src/: budget.rs  grid.rs  lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: inspector.rs  lib.rs
docs/ad/: MIGRATION_SERDE_CBOR.md  RESUME_NEXT.md  RISK_ACCEPTANCE.md  RUN_STATE.md
docs/md/: CHANGELOG.md  postdoc-writeup.md
docs/md/ADR/: 0001-architecture.md
docs/md/receipts/: M0.md
docs/mdx/: architecture.mdx  authoring.mdx  benchmarks.mdx  determinism_boundary.mdx  index.mdx  kernel.mdx  persistence.mdx  rendering.mdx  security-and-integrity.mdx  streaming.mdx  vr.mdx
xtask/: Cargo.toml
xtask/src/: main.rs
