[package]
name = "worldspace-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Asset pipeline scaffolding: registry, content-addressed handles, glTF import stub"

[dependencies]
worldspace-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
