[package]
name = "worldspace-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and utilities for the worldspace engine"

[dependencies]
uuid = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
