[package]
name = "worldspace-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authoritative world state, simulation stepping, deterministic replay"

[dependencies]
worldspace-common = { workspace = true }
uuid = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
