[package]
name = "worldspace-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Renderer-agnostic interface with wgpu backend"

[dependencies]
worldspace-common = { workspace = true }
worldspace-kernel = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
